tdf#126761 add missing underline attribute when showing ppt document

For ppt document opened in Impress, the familiar underline property is
missing. This is to fix that. Underline property is added when ppt
document is being opened.

Change-Id: I8ba02da8ffa1c8e7833645f850cddef84f0fa476